--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
-    "sass": "^1.87.0"
+    "sass": "^1.87.0",
+    "tailwindcss": "^4.1.4"
   }
 }
